@@ -1,16 +1,16 @@
 NULL=
 
-iconsize=22x22
-category=emblems
-icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)
+size = 22x22
+context = emblems
+iconsdir = $(themedir)/$(size)/$(context)
 
-icon_DATA =\
+icons_DATA =\
 	emblem-favorite.png	\
 	emblem-important.png \
 	emblem-symbolic-link.png	\
 	$(NULL)
 
-EXTRA_DIST = $(icon_DATA)
+EXTRA_DIST = $(icons_DATA)
 
 install-data-local: install-iconsDATA
 	(cd $(DESTDIR)$(themedir)/$(size) && $(ICONMAP) -c $(context))
